# beyond_fa_pca

./: README.md  pyproject.toml
scripts/: extract_stats.py  pca.ipynb  run_metric.sh  stats_to_vector.py  test.py
scripts/model/: pca_model.joblib  scaler_spec.joblib  spec_model.joblib
